Finalised (please!!!!!) test code