@@ -1,5 +1,4 @@
 import org.junit.Test;
-
 import java.io.IOException;
 import java.time.Clock;
 import java.util.*;
@@ -9,20 +8,17 @@ import static org.junit.Assert.*;
 public class TestGameController {
 
     static class MockTerminal extends TerminalWithSuggestions {
-        private Queue<String> inputs = new LinkedList<String>();
-        private List<String> messages = new ArrayList<String>();
+        private Queue<String> inputs = new LinkedList<>();
+        private List<String> messages = new ArrayList<>();
 
         public MockTerminal(String... responses) throws IOException {
             super();
-            for (int i = 0; i < responses.length; i++) {
-                inputs.add(responses[i]);
-            }
+            inputs.addAll(Arrays.asList(responses));
         }
 
         @Override
         public String getInputWithSuggestions(List<IMovie> movies, IMovie currentMovie, int timeLimitSeconds) {
-            if (inputs.isEmpty()) return "";
-            return inputs.poll();
+            return inputs.isEmpty() ? "" : inputs.poll();
         }
 
         @Override
@@ -41,79 +37,83 @@ public class TestGameController {
     static class DummyConnectionValidator extends ConnectionValidator {
         @Override
         public List<String> getSharedConnections(IMovie a, IMovie b) {
-            return Arrays.asList("Shared Contributor");
+            return List.of("Nolan");
         }
     }
 
     private IMovie mockMovie() {
-        Movie movie = new Movie("Inception", 2010, Arrays.asList("Sci-Fi", "Action"));
+        Movie movie = new Movie("Inception", 2010, List.of("Sci-Fi", "Action"));
         movie.addActor("Nolan");
         movie.addDirector("Nolan");
         movie.addWriter("Nolan");
+        movie.addContributor("Nolan");
         return movie;
     }
 
-    private GameController makeController(MockTerminal terminal, List<IMovie> movieList) throws IOException {
-        Player p1 = new Player("Alice");
-        Player p2 = new Player("Bob");
-        p1.setWinConditionStrategy(new ActorWinCondition("Nolan"));
-        p2.setWinConditionStrategy(new ActorWinCondition("Nolan"));
+    private GameController makeController(MockTerminal terminal, List<IMovie> movieList, GameModel model) throws IOException {
+        model.initializePlayers();
+        model.getPlayer1().setWinConditionStrategy(new ActorWinCondition("Nolan"));
+        model.getPlayer2().setWinConditionStrategy(new ActorWinCondition("Nolan"));
         ConnectionValidator validator = new DummyConnectionValidator();
-        GameModel model = new GameModel();
-        return new GameController(p1, p2, Clock.systemUTC(), movieList, terminal, validator, model);
+        return new GameController(Clock.systemUTC(), movieList, terminal, validator, model);
     }
 
     @Test
     public void testInitializeGameInitializesPlayers() throws IOException {
         MockTerminal terminal = new MockTerminal();
-        GameController controller = makeController(terminal, Arrays.asList(mockMovie()));
-        controller.initializeGame(Arrays.asList(mockMovie()));
-        assertNotNull(controller.getCurrentPlayer());
+        GameModel model = new GameModel();
+        GameController controller = makeController(terminal, List.of(mockMovie()), model);
+        controller.initializeGame(List.of(mockMovie()));
+        assertEquals(2, model.getPlayers().size());
     }
 
     @Test
     public void testHandlePlayerInputInvalid() throws IOException {
         MockTerminal terminal = new MockTerminal();
-        GameController controller = makeController(terminal, Arrays.asList(mockMovie()));
-        controller.initializeGame(Arrays.asList(mockMovie()));
+        GameModel model = new GameModel();
+        GameController controller = makeController(terminal, List.of(mockMovie()), model);
+        controller.initializeGame(List.of(mockMovie()));
         controller.handlePlayerInput("Fake Movie");
-        assertEquals(0, controller.getCurrentPlayer().getScore());
+        assertEquals(0, model.getCurrentPlayer().getScore());
     }
 
     @Test
     public void testNextTurnSwitchesPlayerCorrectly() throws IOException {
         MockTerminal terminal = new MockTerminal();
-        GameController controller = makeController(terminal, Arrays.asList(mockMovie()));
-        controller.initializeGame(Arrays.asList(mockMovie()));
-        Player original = controller.getCurrentPlayer();
+        GameModel model = new GameModel();
+        GameController controller = makeController(terminal, List.of(mockMovie()), model);
+        controller.initializeGame(List.of(mockMovie()));
+        IPlayer original = model.getCurrentPlayer();
         controller.nextTurn();
-        assertNotSame(original, controller.getCurrentPlayer());
+        assertNotSame(original, model.getCurrentPlayer());
     }
 
     @Test
     public void testEndGameSetsGameOverTrue() throws IOException {
         MockTerminal terminal = new MockTerminal();
-        GameController controller = makeController(terminal, Arrays.asList(mockMovie()));
+        GameModel model = new GameModel();
+        GameController controller = makeController(terminal, List.of(mockMovie()), model);
         assertFalse(controller.isGameOver());
         controller.endGame();
         assertTrue(controller.isGameOver());
     }
 
-
     @Test
     public void testStartGameWithValidMoveCompletesSuccessfully() throws IOException {
         MockTerminal terminal = new MockTerminal("Inception");
-        GameController controller = makeController(terminal, Arrays.asList(mockMovie()));
-        controller.initializeGame(Arrays.asList(mockMovie()));
+        GameModel model = new GameModel();
+        GameController controller = makeController(terminal, List.of(mockMovie()), model);
+        controller.initializeGame(List.of(mockMovie()));
         controller.startGame();
-        assertTrue(controller.isGameOver() || controller.getCurrentPlayer().getScore() > 0);
+        assertTrue(controller.isGameOver() || model.getCurrentPlayer().getScore() > 0);
     }
 
     @Test
     public void testStartGameWithTimeoutTriggersGameOver() throws IOException {
         MockTerminal terminal = new MockTerminal("");
-        GameController controller = makeController(terminal, Arrays.asList(mockMovie()));
-        controller.initializeGame(Arrays.asList(mockMovie()));
+        GameModel model = new GameModel();
+        GameController controller = makeController(terminal, List.of(mockMovie()), model);
+        controller.initializeGame(List.of(mockMovie()));
         controller.startGame();
         assertTrue(controller.isGameOver());
     }
@@ -121,16 +121,19 @@ public class TestGameController {
     @Test
     public void testStartGameHandlesInvalidThenValidMove() throws IOException {
         MockTerminal terminal = new MockTerminal("Fake", "Inception");
-        GameController controller = makeController(terminal, Arrays.asList(mockMovie()));
-        controller.initializeGame(Arrays.asList(mockMovie()));
+        GameModel model = new GameModel();
+        GameController controller = makeController(terminal, List.of(mockMovie()), model);
+        controller.initializeGame(List.of(mockMovie()));
         controller.startGame();
-        assertTrue(controller.isGameOver() || controller.getCurrentPlayer().getScore() > 0);
+        assertTrue(controller.isGameOver() || model.getCurrentPlayer().getScore() > 0);
     }
 
     @Test
-    public void testGetCurrentPlayerNotNull() throws IOException {
+    public void testCurrentPlayerInModelNotNull() throws IOException {
         MockTerminal terminal = new MockTerminal();
-        GameController controller = makeController(terminal, Arrays.asList(mockMovie()));
-        assertNotNull(controller.getCurrentPlayer());
+        GameModel model = new GameModel();
+        GameController controller = makeController(terminal, List.of(mockMovie()), model);
+        controller.initializeGame(List.of(mockMovie()));
+        assertNotNull(model.getCurrentPlayer());
     }
 }
